Update .gitconfig email

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
 	name = Colleen Murphy
-	email = colleen.murphy@suse.com
+	email = colleen.murphy@suse.de
 [gitreview]
 	username = krinkle
 [core]
